src/test/deca/context/invalid/controle_structures/if_bad_type.deca
// Description:
//    Test de if avec une mauvise valeur
//
// Resultats:
//    Context: erreur line 11
//
// Historique:
//    cree le 14/01/2022

{
    if (1) {}
}